# citizen-objections-RAG-WIP

./: .claudeignore  .gitignore  CLAUDE.md  IMPLEMENTATION_ROUND_15.md  LICENSE  README.md  eval_retrieval_recall.py  pyproject.toml
data/XML/: BImSchG.xml  BauGB.xml  Bundesnaturschutzgesetz.xml  Bundeswasserstraßengesetz.xml  EnWG.xml  VwGO.xml  WPG.xml  Wasserhaushaltsgesetz.xml  baunvo.xml  catalogs.py
docs/: BOUNDED_CONTEXTS.md  Brainstorming.pptx  LESSONS_LEARNED_EXPERIMENTS.md  OBSERVABILITY_IMPLEMENTATION.md  OBSERVABILITY_IMPLEMENTATION_V2.md  PII_EVAL_RESULTS.md  PREPROCESSING_EVAL_RESULTS.md  RAG_RETRIEVAL_DECISIONS.md  RETRIEVAL_EVAL_RESULTS.md  SKELETON_SCOPE.md
docs/data_governance/: DATA_GOVERNANCE_STATEMENT.md  data_governance-eng.md  data_governance_ger.md
docs/decisions/: adr-001.md  adr-002-llm-provider-isolation.md  adr-002.md  adr-003.md  adr-004-one-llm-triage-gate.md  adr-005.md  adr-006-json-line-state-machine.md  adr-006.md  adr-007.md  adr-008.md  adr-009-retrieval-via-semantics.md  adr-010-norm-grounding.md  adr-010.md  adr-011-briefing-structure.md  adr-012.md  adr-013-coordination-via-sequential-contexts.md  adr-014.md  adr-015-fail-fast-delivery-boundary.md  adr-016.md  adr-017.md  adr-018-hybrid-norm-assignment.md  adr-019.md  adr-020.md  adr-021-exact-match-norm-resolution.md  adr-021.md  adr-022-deterministic-briefing.md  adr-022.md  adr-023-observability-architecture.md  adr-023.md  adr-024-tamper-evident-audit-trail.md  adr-025-pii-masking-layered.md  adr-025.md  adr-026.md  adr-027.md  adr-028.md  adr-029-auditevent-serialization.md  adr-030-durable-append-and-recovery.md  adr-030.md  adr-031-chain-verification.md  adr-031.md  (+5 more)
docs/pre-registrations/: round-14.md  round-15.md
experiments/: eval_chain_anchor.py  faiss_retrieval_spike_D.py
experiments/extraction_evaluation/data/mixed/: einspruch_11_mixed.txt  einspruch_12_mixed.txt  einspruch_13_mixed.txt
experiments/extraction_evaluation/data/typ1/: einspruch_01.txt  einspruch_02.txt  einspruch_03.txt  einspruch_04.txt  einspruch_05.txt  einspruch_06.txt  einspruch_07.txt  einspruch_08.txt  einspruch_09.txt  einspruch_10.txt
experiments/extraction_evaluation/data/typ2/: einspruch_14.txt  einspruch_15.txt  einspruch_16.txt  einspruch_17.txt  einspruch_18.txt  einspruch_19.txt  einspruch_20.txt
experiments/extraction_evaluation/ground_truth/: catalog_definition.json  retrieval_gt.py  typ2.json
experiments/extraction_evaluation/script/: extraction_evaluation.py  norm_coverage_eval.py  norm_coverage_eval_hybrid.py  norm_extraction_evaluation.py  norm_extractor_benchmark.py  norm_extractor_benchmark_mistral.py  norm_extractor_benchmark_toggles.py
experiments/extraction_spikes/: extraction_spike_A.py
experiments/faiss_retreival_spikes/: faiss_catalog_spike.py  faiss_retrieval_spike_A.py  faiss_retrieval_spike_B.py  faiss_retrieval_spike_C.py  faiss_spike.py
experiments/pii_evaluation/: evaluate.py  ground_truth.JSON  results.json  run_masker.py
experiments/smoke_tests/: eval_retrieval_recall.py  smoke_test_loader.py  smoke_test_retrieval.py
experiments/vector_retrieval_reference/: README.md  e5_embedder.py  faiss_norm_index.py
src/app/: __main__.py  observability_registry.py  pipeline.py
src/app/audit_log/: __init__.py  anchor.py  events.py  payload_schema.py  protocols.py  serialization.py  service.py  store.py  verification.py
src/app/briefing/: entities.py  renderer.py  serialization.py  service.py
src/app/core/: __init__.py  entities.py  events.py  failures.py  prompts.py  protocols.py  results.py  statuses.py
src/app/document_ingestion/: entities.py  events.py  presidio_masker.py  protocols.py  service.py  zone_extractor.py
src/app/observability/: __init__.py  correlation.py  events.py  logging_config.py  metrics.py  tracing.py
src/app/response_drafting/: briefing_renderer.py  briefing_service.py  prompts.py  response_drafting_entities.py  retrieval.py  service.py
src/app/retrieval/: e5_embedder.py  entities.py  faiss_norm_index.py  gesetz_xml_loader.py  protocols.py  service.py
src/app/triage/: catalog.py  classification.py  events.py  llm_schema.py  norm_extractor.py  prompts.py  protocols.py  service.py
src/citizen_objections_rag/: pipeline.py
src/citizen_objections_rag/audit_log/: __init__.py  service.py  store.py
src/citizen_objections_rag/core/: __init__.py  data_structures.py  entities.py  events.py  failures.py  models.py  protocols.py  results.py  statuses.py
src/citizen_objections_rag/document_ingestion/: service.py
src/citizen_objections_rag/response_drafting/: prompts.py  service.py
src/citizen_objections_rag/triage/: catalog.py  classification.py  llm_schema.py  norm_extractor.py  prompts.py  retrieval.py  service.py
tests/: conftest.py
tests/medium_scale/: test_cli_smoke.py  test_pipeline_smoke.py  test_presidio_masker.py
tests/small_scale/: test_cli.py  test_import_contracts.py  test_observability_import_isolation.py  test_observability_logging.py  test_observability_metrics.py  test_observability_registry.py  test_observability_tracing.py  test_pipeline_completion_ordering.py  test_pipeline_failure_routing.py  test_pipeline_logging.py  test_pipeline_mapping_seam.py  test_pipeline_prompt_boundary.py  test_pipeline_provenance.py
tests/small_scale/audit_log/: test_eval_chain_anchor.py  test_payload_schema.py  test_serialization.py  test_service.py  test_store.py
tests/small_scale/briefing/: test_renderer.py  test_serialization.py  test_service.py
tests/small_scale/core/: test_events.py
tests/small_scale/document_ingestion/: test_service.py  test_zone_extractor.py
tests/small_scale/response_drafting/: test_service.py
tests/small_scale/retrieval/: test_corpus_id.py  test_loader_contract.py
tests/small_scale/triage/: test_catalog.py  test_classification.py  test_llm_schema.py  test_norm_extractor.py  test_prompts.py  test_service.py
tests/triage/: test_catalog.py  test_classification.py  test_service.py
tests/unit/audit_log/: test_store.py
tests/unit/response_drafting/: test_service.py
(+20 files in other folders)
