[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citizen-objections-rag"
version = "0.1.0"
description = "RAG system for processing mass citizen objections in German public participation procedures"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
    "anthropic>=0.25",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/citizen_objections_rag"]

[tool.ruff]
line-length = 88
src = ["src"]
exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"src/citizen_objections_rag/triage/prompts.py" = ["E501"]
"src/citizen_objections_rag/response_drafting/prompts.py" = ["E501"]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]